# nrps-rs

./: .gitignore  Cargo.toml  README.md
src/: config.rs  errors.rs  lib.rs  main.rs
src/encodings/: blin.rs  mod.rs  wold.rs
src/encodings/rausch/: alpha_helix.rs  beta_sheet.rs  beta_turn.rs  hydrogenbond.rs  hydrophobicity_neu1.rs  hydrophobicity_neu2.rs  hydrophobicity_neu3.rs  isoelectric.rs  mod.rs  polar_grantham.rs  polar_radzicka.rs  polar_zimmerman.rs  volume.rs
src/predictors/: mod.rs  predictions.rs  stachelhaus.rs
src/svm/: kernels.rs  mod.rs  models.rs  vectors.rs
utils/: aaindex2rust.py
